fixed narrow viewport padding on narrow container

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -176,6 +176,7 @@ a.dark-contrast {
 
 .narrow-container {
   max-width: 900px;
+  padding: 0 1.6em;
 }
 
 .description {
